@@ -601,40 +601,11 @@ argument_list|)
 throw|;
 block|}
 block|}
-try|try
-block|{
-if|if
-condition|(
+name|FileSystem
+name|oldFs
+init|=
 name|fs
-operator|!=
-literal|null
-condition|)
-block|{
-name|fs
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|SolrException
-argument_list|(
-name|ErrorCode
-operator|.
-name|SERVER_ERROR
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
+decl_stmt|;
 try|try
 block|{
 name|fs
@@ -656,6 +627,40 @@ name|getConf
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+try|try
+block|{
+if|if
+condition|(
+name|oldFs
+operator|!=
+literal|null
+condition|)
+block|{
+name|oldFs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1476,18 +1481,42 @@ name|boolean
 name|committed
 parameter_list|)
 block|{
-synchronized|synchronized
-init|(
-name|this
-init|)
+name|close
+argument_list|(
+name|committed
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|(
+name|boolean
+name|committed
+parameter_list|,
+name|boolean
+name|deleteOnClose
+parameter_list|)
+block|{
+try|try
 block|{
 name|super
 operator|.
 name|close
 argument_list|(
 name|committed
+argument_list|,
+name|deleteOnClose
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
 name|IOUtils
 operator|.
 name|closeQuietly
